Blender crashes on selecting text-object #56064

Closed
opened 2018-07-20 15:55:16 +02:00 by Arnd Ludwig · 9 comments

System Information
Win10 Pro, 64bit, latest updates
NVidia GeForce 1080, 8GB, 391.35

Blender Version


Blender 2.80 (sub 20) System Information


Blender:


version: 2.80 (sub 20), branch: blender2.8, commit date: 2018-07-19 15:20, hash: 94722121e5, type: Release
build date: 19/07/2018, 19:02
platform: Windows
binary path: 'D:\blender28\blender.exe'
build cflags: /W3 /w34062 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /we4013 /we4133 /we4431 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP -openmp
build cxxflags: /W3 /w34062 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /we4013 /we4133 /we4431 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc -openmp
build linkflags: /MACHINE:X64 /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib /ignore:4049 /ignore:4217 /ignore:4221
build system: CMake

Short description of error
Blender crashes as soon as I right-click select the Text-Object in 3D-View, or left click in Outliner

Exact steps for others to reproduce the error
Open attachted blend and right-click on Text-Object in 3D-View or left-click in outliner.

Additional info: I recreated the scene and blender crashed during editing the text of the text-object. After that the new file showed the same behavior. I don't remember if a crash occured with the attached file, though.
Luzi.blend

**System Information** Win10 Pro, 64bit, latest updates NVidia GeForce 1080, 8GB, 391.35 **Blender Version** **** # Blender 2.80 (sub 20) System Information **** Blender: **** version: 2.80 (sub 20), branch: blender2.8, commit date: 2018-07-19 15:20, hash: 94722121e57, type: Release build date: 19/07/2018, 19:02 platform: Windows binary path: 'D:\\blender28\\blender.exe' build cflags: /W3 /w34062 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /we4013 /we4133 /we4431 /DWIN32 /D_WINDOWS /W3 /nologo /J /Gd /MP -openmp build cxxflags: /W3 /w34062 /wd4018 /wd4146 /wd4065 /wd4127 /wd4181 /wd4200 /wd4244 /wd4267 /wd4305 /wd4800 /wd4828 /we4013 /we4133 /we4431 /DWIN32 /D_WINDOWS /W3 /GR /EHsc /nologo /J /Gd /MP /EHsc -openmp build linkflags: /MACHINE:X64 /SUBSYSTEM:CONSOLE /STACK:2097152 /INCREMENTAL:NO /NODEFAULTLIB:msvcrt.lib /NODEFAULTLIB:msvcmrt.lib /NODEFAULTLIB:msvcurt.lib /NODEFAULTLIB:msvcrtd.lib /ignore:4049 /ignore:4217 /ignore:4221 build system: CMake **Short description of error** Blender crashes as soon as I right-click select the Text-Object in 3D-View, or left click in Outliner **Exact steps for others to reproduce the error** Open attachted blend and right-click on Text-Object in 3D-View or left-click in outliner. Additional info: I recreated the scene and blender crashed during editing the text of the text-object. After that the new file showed the same behavior. I don't remember if a crash occured with the attached file, though. [Luzi.blend](https://archive.blender.org/developer/F3999793/Luzi.blend)
Author

Added subscriber: @ArndLudwig

Added subscriber: @ArndLudwig

#57095 was marked as duplicate of this issue

#57095 was marked as duplicate of this issue

Added subscriber: @s12a

Added subscriber: @s12a

I can reproduce the crash on Windows 10 64bit on a987daa18d with the attached .blend file above.

I found that if I delete the Bezier Circle, it doesn't crash anymore.

image.png

This could be related to Curve issues like #56046 or #56016.

I can reproduce the crash on Windows 10 64bit on a987daa18dc with the attached .blend file above. I found that if I delete the Bezier Circle, it doesn't crash anymore. ![image.png](https://archive.blender.org/developer/F4005917/image.png) This could be related to Curve issues like #56046 or #56016.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-07-26 17:06:35 +02:00

Confirmed here as well on Linux, will check further later.

Confirmed here as well on Linux, will check further later.

This depends on addressing #56172…

This depends on addressing #56172…

Added subscribers: @kostex, @lichtwerk

Added subscribers: @kostex, @lichtwerk

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56064
No description provided.