Fix crash in T56064: Blender crashes on selecting text-object.

The root of the issue remains though, see T56172, this is just a quick
bandaid to stop crashing on it, until we find a proper solution.