source/blender/blenkernel/intern/font.c
@@ -1118,7 +1118,7 @@ makebreak:
 	/* Note: Only OB_CURVE objects could have a path  */
 	if (cu->textoncurve && cu->textoncurve->type == OB_CURVE) {
 		BLI_assert(cu->textoncurve->runtime.curve_cache != NULL);
-		if (cu->textoncurve->runtime.curve_cache->path) {
+		if (cu->textoncurve->runtime.curve_cache != NULL && cu->textoncurve->runtime.curve_cache->path != NULL) {
 			float distfac, imat[4][4], imat3[3][3], cmat[3][3];
 			float minx, maxx, miny, maxy;
 			float timeofs, sizefac;
